# ia-iv

./: .gitignore  README.md  logs.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: checkpoint.py  cluster.py  config.py  data.py  ensure.py  geo.py  main.py  pipeline.py  region.py
data/ibge/: densidade.csv  pop.csv
data/inmet/2026/: INMET_NE_BA_A401_SALVADOR_01-01-2026_A_30-06-2026.CSV  INMET_NE_BA_A402_BARREIRAS_01-01-2026_A_30-06-2026.CSV  INMET_NE_BA_A404_LUIS EDUARDO MAGALHAES_01-01-2026_A_30-06-2026.CSV  INMET_NE_BA_A405_CARAVELAS_01-01-2026_A_30-06-2026.CSV  INMET_NE_BA_A406_CRUZ DAS ALMAS_01-01-2026_A_30-06-2026.CSV  INMET_NE_BA_A407_ITIRUCU_01-01-2026_A_30-06-2026.CSV  INMET_NE_BA_A424_IRECE_01-01-2026_A_30-06-2026.CSV  (+38 more)
data/ml/: README.md
experiments/: README.md  experiments.jsonl
ml/: __init__.py  cluster.py  columns.py  config.py  dataset.py  experiments.py  feature_engineering.py  municipalities.py  paths.py  preprocess.py  reference.py  regions.py  run.py  validate.py
notebooks/: 01_1_historia_completa.ipynb  01_2_core_vs_regra_simples.ipynb  01_historia_completa.ipynb  01_historia_completa_k_3.ipynb  01_historia_completa_mais_dados.ipynb  02_historia_clusters.ipynb  03_historia_clusters_10anos.ipynb  _1_geo.ipynb  analise_bases.ipynb  hello.ipynb  integrated_analysis.ipynb  k_escolha.ipynb
scripts/: build_nordeste.py  download_raw.py  extract_deng_state.py  run_api.py
slides/: slides.tex
streamlit/: dengue_geo.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css  types.ts
(+11 files in other folders)
