[project]
name = "ia-iv"
version = "0.1.0"
description = "Aprendizado de Máquina — notificações de dengue SINAN (Bahia)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbconvert>=7.0",
    "requests>=2.31",
    "folium>=0.20.0",
    "plotly>=6.8.0",
]

[tool.uv]
package = false
