[project]
name = "ia-iv"
version = "0.1.0"
description = "Aprendizado de Máquina — clusterização dengue SINAN (IA-IV)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "graphviz>=0.20",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbconvert>=7.0",
    "requests>=2.31",
    "folium>=0.20.0",
    "plotly>=6.8.0",
    "streamlit>=1.28",
    "streamlit-folium>=0.18",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
ia-iv = "ml.run:main"
ia-iv-exp = "ml.experiments:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml"]

[tool.uv]
package = true
